# rust-rdma-io

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
.paw/work/async-rdma-integration/: Spec.md  WorkflowContext.md
bnd-rdma-gen/: Cargo.toml  rdma.toml
bnd-rdma-gen/src/: lib.rs  main.rs
cmake/: BuildRxe.cmake
docs/: Simplifications.md
docs/background/: Bindings.md  RdmaMechanisms.md  RecvBufferDesign.md  Rsocket.md  demikernel.md  msquic-rdma.md  siw-vs-rxe.md
docs/bench/: README.md  collection.md  echo.md  grpc.md  h1.md  methodology.md  metrics.md  recording.md  strategy.md
docs/bench/azure-mana-rocev2/: README.md  scoreboard.md
docs/bench/azure-mana-rocev2/echo/: busy-poll.md  large-payload-8kib.md  message-rate-64b.md  thread-per-core-park.md
docs/bench/azure-mana-rocev2/grpc/: cpu-memory.md  payload.md  throughput-64b.md
docs/bench/azure-mana-rocev2/h1/: large-payload-8kib.md  thread-per-core.md  throughput-64b.md
docs/bench/echo/: README.md  busy-poll.md  large-payload-8kib.md  message-rate-64b.md  thread-per-core-park.md
docs/bench/grpc/: README.md  cpu-memory.md  payload.md  throughput-64b.md
docs/bench/h1/: README.md  large-payload-8kib.md  methodology.md  thread-per-core.md  throughput-64b.md
docs/bench/scenarios/: echo.md  grpc.md  h1.md
docs/benchv3/: README.md  results-template.md  run-procedure.md  scenario-matrix.md
docs/bugs/: cq-notification-loss.md  credit-ring-ooo-overwrite.md  drop-ordering.md  h3-util-cert-panic.md  read-ring-concurrent-stream-deadlock.md  ring-send-queue-exhaustion.md
docs/design/: AsyncIntegration.md  AsyncQpPolling.md  Background.md  BndBindings.md  DataPathCopies.md  EchoBenchmark.md  ExistingLibs.md  RdmaOperations.md  RecvBufferDesign.md  RingBufferStream.md  Rsocket.md  SafeApi.md  Testing.md  TonicIntegration.md  TonicRdmaVsTcpPerformance.md  encryption.md  quinn-rdma.md  rdma-credit-ring-transport.md  rdma-read-ring-busy-poll.md  rdma-read-ring-transport.md  rdma-ring-transport.md  rdma-transport-comparison.md  rdma-transport-layer.md
docs/design/Internal/: AsyncIntegration.md  QemuTestInfra.md  TonicIntegration.md  encryption.md
docs/future/: QemuTestInfra.md  RdmaBenchmark.md  RingPerformance.md  RingTransportSimplifications.md  RsocketBindings.md  StreamImprovements.md
rdma-io/: Cargo.toml
rdma-io-busy/: Cargo.toml
rdma-io-busy/src/: lib.rs
rdma-io-quinn/: Cargo.toml
rdma-io-quinn/src/: lib.rs
rdma-io-sys/: Cargo.toml  README.md  build.rs
rdma-io-sys/src/: lib.rs
rdma-io-sys/src/rdma/: mod.rs
rdma-io-sys/src/rdma/ibverbs/: mod.rs
rdma-io-sys/src/rdma/rdmacm/: mod.rs
rdma-io-sys/src/rdma/wrapper/: mod.rs
rdma-io-sys/winmd/: bnd-rdma.winmd
rdma-io-sys/wrapper/: wrapper.c  wrapper.h
rdma-io-tests/: Cargo.toml
rdma-io-tests/proto/: greeter.proto
rdma-io-tests/src/: async_cq_tests.rs  async_qp_tests.rs  async_stream_tests.rs  busy_pool.rs  cm_tests.rs  lib.rs  safe_api_tests.rs  stream_tests.rs  sys_tests.rs  tonic_tests.rs
rdma-io-tests/tests/: async_cq_tests.rs  async_qp_tests.rs  async_stream_tests.rs  cm_tests.rs  quinn_tests.rs  read_ring_busy_pool_tests.rs  read_ring_busy_tests.rs  read_ring_transport_tests.rs  ring_transport_tests.rs  safe_api_tests.rs  sys_tests.rs  tonic_h3_tests.rs  tonic_tests.rs  tonic_tls_tests.rs  transport_tests.rs
rdma-io-tonic/: Cargo.toml  README.md
rdma-io-tonic/src/: connector.rs  incoming.rs  lib.rs  stream.rs  tls.rs
rdma-io/src/: async_cm.rs  async_cq.rs  async_qp.rs  async_stream.rs  cm.rs  comp_channel.rs  completion_source.rs  conn_slot.rs  core_driver.rs  cq.rs  credit_ring_transport.rs  device.rs  error.rs  lib.rs  mr.rs  mw.rs  pd.rs  qp.rs  rdma_ring_transport.rs  rdma_transport.rs  read_ring_transport.rs  ring_common.rs  send_recv_transport.rs  stream.rs  tokio_notifier.rs  transport.rs  transport_common.rs  wc.rs  wr.rs
scripts/: check-build-deps.sh  setup-rxe.sh  setup-siw.sh  teardown-rxe.sh  teardown-siw.sh
tests/benchv3/: README.md  grid.py  report.py  run_matrix.py
tests/benchv3/tests/: test_grid.py  test_report.py  test_runner.py
tests/e2e/: README.md  ansible.cfg  inventory_local.py  run_bench.sh  run_tests.sh
tests/e2e/playbooks/: bench_run.yml  deploy_bench.yml  hello_world.yml  perf_bench.yml  perftest_cm_repro.yml  rdma_ping_test.yml  reboot_vms.yml  run_tests.yml  run_unit_tests.yml  setup_rdma.yml  setup_rdma_hw.yml  test_connectivity.yml
tests/infra-local/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
tests/infra-local/scripts/: destroy-vm.sh  ssh-vm.sh  start-vm.sh
tests/rdma-io-bench/: Cargo.toml  build.rs
tests/rdma-io-bench/proto/: greeter.proto
tests/rdma-io-bench/src/: client.rs  common.rs  echo.rs  grpc.rs  h1.rs  h3_common.rs  lib.rs  metrics.rs  report.rs  server.rs  tls_common.rs
