[workspace]
resolver = "2"
members = ["bnd-rdma-gen", "rdma-io", "rdma-io-sys", "rdma-io-tests"]

package.edition = "2024"
package.license = "MIT"

[workspace.dependencies]
# Internal crates
rdma-io-sys = { path = "rdma-io-sys" }
rdma-io = { path = "rdma-io" }

# bnd ecosystem (path deps to sibling repo)
bnd-winmd = { path = "../bnd/bnd-winmd" }
bnd-linux = { path = "../bnd/bnd-linux" }

# Core
bitflags = "2"
libc = "0.2"
thiserror = "2"
tracing = "0.1"

# Async
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-io = "2"

# Build / codegen
cc = "1"
windows-bindgen = "0.66"
windows-link = "0.2"

# Dev / test
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
