[workspace]
resolver = "2"
members = ["bnd-rdma-gen", "rdma-io", "rdma-io-sys", "rdma-io-tests", "rdma-io-tonic"]

package.edition = "2024"
package.license = "MIT"

[workspace.dependencies]
# Internal crates
rdma-io-sys = { path = "rdma-io-sys" , version = "0.0.1"}
rdma-io = { path = "rdma-io" }

# bnd ecosystem (path deps to sibling repo)
bnd-winmd = { version = "0.0.6" }
bnd-linux = { version = "0.0.6" }
bnd-macros = { version = "0.0.6" }

# Core
bitflags = "2"
libc = "0.2"
thiserror = "2"
tracing = "0.1"

# Async
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Build / codegen
cc = "1"
windows-bindgen = "0.66"

# Dev / test
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
