[package]
name = "bnd-rdma-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Generator that produces the bnd-rdma crate from rdma-core system headers"
publish = false

[dependencies]
bnd-winmd.workspace = true
tracing-subscriber.workspace = true
windows-bindgen.workspace = true

[dev-dependencies]
tempfile.workspace = true
