[package]
name = "rdma-io-quinn"
version = "0.0.1"
edition = "2021"
description = "Quinn QUIC over RDMA — AsyncUdpSocket implementation using rdma-io Transport trait"
license = "MIT"

[dependencies]
rdma-io = { path = "../rdma-io" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
tokio = { version = "1", features = ["rt", "net", "sync"] }
