[package]
name = "rdma-io-quinn"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Quinn QUIC over RDMA — AsyncUdpSocket implementation using rdma-io Transport trait"
# Not yet ready for release.
publish = false

[dependencies]
rdma-io.workspace = true
quinn.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync"] }
tracing.workspace = true
