[package]
name = "rdma-io-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Low-level RDMA sys crate — FFI bindings for libibverbs + librdmacm"

[dependencies]
bnd-linux = { workspace = true, features = ["posix_pthread", "posix_socket", "posix_inet", "posix_types", "posix_unistd", "posix_stat", "linux_types"] }
windows-link.workspace = true

[build-dependencies]
cc.workspace = true

[features]
default = ["ibverbs", "rdmacm", "wrapper"]
Foundation = []
ibverbs = ["Foundation"]
rdmacm = ["Foundation"]
wrapper = ["Foundation"]
