[package]
name = "rdma-io-sys"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Low-level RDMA sys crate — FFI bindings for libibverbs + librdmacm"
readme = "README.md"

[dependencies]
bnd-linux = { workspace = true, features = ["posix_pthread", "posix_socket", "posix_inet", "posix_types", "posix_unistd", "posix_stat", "linux_types"] }
bnd-macros = { workspace = true }

[build-dependencies]
cc.workspace = true

[features]
default = ["ibverbs", "rdmacm", "wrapper"]
Foundation = []
ibverbs = ["Foundation"]
rdmacm = ["Foundation"]
wrapper = ["Foundation"]
