[package]
name = "rdma-io-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Integration tests for rdma-io-sys against SoftIWarp (siw)"
publish = false

[dependencies]
rdma-io-sys.workspace = true
rdma-io = { workspace = true, features = ["tokio"] }
rdma-io-tonic = { workspace = true, features = ["tls"] }
rdma-io-quinn.workspace = true
quinn.workspace = true
tonic = { workspace = true, features = ["server", "channel", "router", "transport"] }
tonic-tls.workspace = true
tonic-h3.workspace = true
tonic-prost.workspace = true
prost.workspace = true
http.workspace = true
openssl.workspace = true
rcgen.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "time"] }
tokio-stream.workspace = true
futures-io.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tracing.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
