[package]
name = "rdma-io-tonic"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Tonic gRPC transport over RDMA"
readme = "README.md"

[dependencies]
rdma-io = { workspace = true, features = ["tokio"] }
tonic = { workspace = true, features = ["server", "channel"] }
hyper-util.workspace = true
tower-service.workspace = true
http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true

# TLS (optional)
tonic-tls = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:tonic-tls", "dep:openssl"]
