[package]
name = "rdma-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Safe Rust API for RDMA (libibverbs + librdmacm)"

[features]
default = []
tokio = ["dep:tokio", "dep:futures-io"]
smol = ["dep:async-io", "dep:futures-io"]

[dependencies]
rdma-io-sys.workspace = true
bnd-linux = { workspace = true, features = ["posix_socket", "posix_inet"] }
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true
futures-io = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
