[package]
name = "rdma-io"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Safe async Rust bindings for RDMA programming over libibverbs and librdmacm"
readme = "../README.md"

[features]
default = ["tokio"]
async = ["dep:futures-io"]
tokio = ["async", "dep:tokio"]

[dependencies]
rdma-io-sys.workspace = true
bnd-linux = { workspace = true, features = ["posix_socket", "posix_inet"] }
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true
futures-io = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
