[package]
name = "rdma-io-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rdma-bench-server"
path = "src/server.rs"

[[bin]]
name = "rdma-bench-client"
path = "src/client.rs"

[dependencies]
rdma-io = { path = "../../rdma-io", features = ["tokio"] }
rdma-io-tonic = { path = "../../rdma-io-tonic", features = ["tls"] }
rdma-io-quinn = { path = "../../rdma-io-quinn" }
tonic.workspace = true
tonic-tls.workspace = true
tonic-prost.workspace = true
prost.workspace = true
openssl.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdrhistogram = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build.workspace = true
