[package]
name = "rdma-io-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rdma-bench-server"
path = "src/server.rs"

[[bin]]
name = "rdma-bench-client"
path = "src/client.rs"

[dependencies]
rdma-io = { path = "../../rdma-io", features = ["tokio"] }
rdma-io-tonic = { path = "../../rdma-io-tonic", features = ["tls"] }
rdma-io-quinn = { path = "../../rdma-io-quinn" }
tonic.workspace = true
tonic-tls.workspace = true
tonic-h3.workspace = true
tonic-prost.workspace = true
prost.workspace = true
quinn.workspace = true
openssl.workspace = true
tokio-openssl = "0.6"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util.workspace = true
http-body-util = "0.1"
bytes = "1"
futures-util.workspace = true
http = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdrhistogram = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build.workspace = true
